--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,8 +36,9 @@
 .bg_relative {
   background-image: url(./images/background.jpg);
   /* position: fixed; */
+  /* overflow-y: scroll; */
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
 }
