--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -81,3 +81,11 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.shadow-white{
+  box-shadow: 0px 0px 20px white;
+}
+
+.text-small {
+  font-size: 70%;
+}
