--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,27 +1,11 @@
-.App {
-  text-align: start;
-}
+/* GREEN COLOUR CODE: 31BF31 */
 
 .color-nav {
   background-color: black;
 }
 
-.bg-black{
-  background-color: black;
-}
-
 #file {
   height: 43px;
-}
-
-.breadcrumb-color {
-  background-color: white;
-}
-
-.btn-color {
-  color: white;
-  background-color: black;
-  border-color: black;
 }
 
 .bg_fixed {
@@ -38,48 +22,13 @@
   /* position: fixed; */
   /* overflow-y: scroll; */
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 150vh;
   background-size: cover;
   background-position: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 body {
   overflow-x: hidden;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .shadow-white{
@@ -90,27 +39,26 @@ body {
   font-size: 70%;
 }
 
-/* GREEN COLOUR CODE: 31BF31 */
-
 body {
 	background: darkslategray;
 }
+
 .rotating-box {
-	width: 300px;
-	height: 300px;
-	margin: 10px auto;
-	perspective: 800px;
+	width: 75%;
+	height: 75%;
+  margin: 10px auto;
 }
+
 .single-rb {
-	width: 300px;
-	height: 300px;
+	width: 100%;
+	height: 75%;
 	animation: rotate 15s linear infinite;
 	transform-style: preserve-3d;
 	margin-top: 120px;
 }
 .single-rb img {
-	height: 300px;
-	width: 300px;
+	height: 100%;
+	width: 100%;
 }
 .single-rb div {
 	position: absolute;
