--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,21 +44,21 @@ body {
 }
 
 .rotating-box {
-	width: 75%;
-	height: 75%;
+	width: 300px;
+	height: 300px;
   margin: 10px auto;
 }
 
 .single-rb {
-	width: 100%;
-	height: 75%;
+	width: 300px;
+	height: 300px;
 	animation: rotate 15s linear infinite;
 	transform-style: preserve-3d;
 	margin-top: 120px;
 }
 .single-rb img {
-	height: 100%;
-	width: 100%;
+	height: 300px;
+	width: 300px;
 }
 .single-rb div {
 	position: absolute;
