--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -95,3 +95,125 @@ body {
 		transform: rotateY(360deg);
 	}
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #161b33;
+  color: white;
+}
+
+/* #heading > p{
+  font-size: 28px;
+} */
+
+#container > p {
+  font-family: "Kaushan Script", cursive;
+  /* font-size: 25px; */
+}
+
+/* ------------------------ Card 1-------------------------------  */
+#container {
+  display: inline-block;
+  width: 100%;
+}
+
+#card1 {
+  position: relative;
+  padding: 1em;
+}
+
+@media only screen and (min-width: 800) {
+  #card1 {
+    float: left;
+    /* width: 50%;
+    height: 50%; */
+    /* margin: 10px auto; */
+  }
+  #card1:first-child {
+    margin-left: 88px;
+  }
+}
+
+@media only screen and (max-width: 800) {
+  #card1 {
+    /* width: 80%; */
+    /* margin: 10px auto; */
+  }
+}
+
+#card1:hover #img1 {
+  opacity: 0.4;
+  overflow-y: hidden;
+}
+
+#img1 {
+  width: 100%;
+  height: 100%;
+  border: 1px solid;
+  opacity: 1;
+  transition: opacity ease-out 0.5s;
+}
+
+ #cardText {
+/*  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 83%;
+  height: 70%;
+  padding: 10px;
+  text-align: center;
+  font-family: "Bigelow Rules", cursive;
+  font-size: 30px;
+  letter-spacing: 2px; */
+  opacity: 0;
+  transition: opacity ease-out 0.5s;
+}
+
+#card1:hover #cardText {
+  opacity: 1;
+  overflow-y: hidden;
+}
+/* 
+@media only screen and (max-width: 800px) {
+  #cardText {
+    font-size: 20px;
+  }
+} */
+
+#cardText::before,
+#cardText::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#cardText::before {
+  border-bottom: 1px solid;
+  border-top: 1px solid;
+  transform: scale(0, 1);
+  transition: transform ease-out 0.5s;
+}
+
+#cardText::after {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  transform: scale(1, 0);
+  transition: transform ease-out 0.5s;
+}
+
+#card1:hover #cardText::before {
+  transform: scale(1, 1);
+  overflow-y: hidden;
+}
+
+#card1:hover #cardText::after {
+  transform: scale(1, 1);
+  overflow-y: hidden;
+}
